--- a/vms/svnhttp-chef_solo/Vagrantfile
+++ b/vms/svnhttp-chef_solo/Vagrantfile
@@ -1,5 +1,5 @@
 Vagrant.configure("2") do |config|
-  config.vm.box = "svnhttp"
+  config.vm.box = "svn"
   config.vm.network :forwarded_port, guest: 80, host: 8080
   config.vm.provision :chef_solo do |chef|
     chef.cookbooks_path = "~/chef-repo/cookbooks"
